notebook clean up

--- a/k-means-clustering/k-means-clustering.ipynb
+++ b/k-means-clustering/k-means-clustering.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "k-means clustering in python\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html"
+    "This notebook is an introductory notebook created to explore O'Reilly Introduction to ML w/Python in the area of k-means clustering https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html"
    ]
   },
   {
