--- a/linear-regressions/linear-regression.ipynb
+++ b/linear-regressions/linear-regression.ipynb
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lasso regression also focusses on regularization (L1 prior as regularizer aka the Lasso) by forcing some theta (coefficients) to zero.  This can lead to underfitting by removing to many features.\n",
+    "Lasso regression also focusses on regularization (L1 prior as regularizer aka the Lasso) by forcing some theta (coefficients) to zero.  This can lead to underfitting by removing t many features.\n",
     "https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Lasso.html"
    ]
   },
