svm, graphs, attestation

--- a/k-means-clustering.ipynb
+++ b/k-means-clustering.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "All of the code presented in this notoebook is derived from or based on the O'Reilly&reg; book Introduction to Machine Learning with Python &copy; 2017 by Andreas C. Muller and Sarah Guido.  Please make sure you present the correct attestation to this book if you reference or utilize any of the information in this notebook.  And please buy the book, it's excellent!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notebook is an introductory notebook created to explore O'Reilly Introduction to ML w/Python in the area of k-means clustering https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html"
    ]
   },
