model tester for neural networks using scikit

--- a/neural-networks.ipynb
+++ b/neural-networks.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "MLPClassifier(random_state=0, solver='lbfgs')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "Text(0, 0.5, 'f 1')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -124,7 +124,7 @@
        "Text(0, 0.5, 'f 1')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "Text(0, 0.5, 'f 1')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "Text(0, 0.5, 'f 1')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -310,11 +310,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Automated model parameter explorer to help determine the best parameters given the train and test data. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def run_model(X_train, y_train, X_test, y_test, solver, random_state, max_iter, alpha, hidden_layer_sizes):\n",
+    "    mlp = MLPClassifier(solver=solver,\n",
+    "                        max_iter=max_iter,\n",
+    "                        alpha=alpha,\n",
+    "                        random_state=random_state,\n",
+    "                        hidden_layer_sizes=hidden_layer_sizes)\n",
+    "    mlp.fit(X_train,y_train)\n",
+    "    train_score = mlp.score(X_train,y_train)\n",
+    "    test_score = mlp.score(X_test,y_test)\n",
+    "    return train_score, test_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_model_tests(X,y,random_state=7):\n",
+    "    X_train,X_test,y_train,y_test = train_test_split(X,y,random_state=random_state)\n",
+    "    \n",
+    "    # Scale the data to have a mean of 0 and a variance of 1\n",
+    "    train_mean = X_train.mean(axis=0)\n",
+    "    train_std = X_train.std(axis=0)\n",
+    "    X_train = (X_train - train_mean) / train_std\n",
+    "    X_test = (X_test - train_mean) / train_std\n",
+    "\n",
+    "    best_test_score = 0\n",
+    "    worst_test_score = 1\n",
+    "    best_solver = 'none'\n",
+    "    best_hidden_layers = []\n",
+    "    best_alpha = 0\n",
+    "    \n",
+    "    solvers = ['lbfgs', 'sgd', 'adam']\n",
+    "    hidden_layers = [[100],[50],[10],[10,10],[50,30],[10,10,10],[50,30,10]]\n",
+    "    alphas = [0.0001,0.001,0.01,0.1,1]\n",
+    "    random_states=[0, 7, 42]  # Mixing up the random state a little for better results\n",
+    "    \n",
+    "    for solver in solvers:\n",
+    "        for hidden_layer_sizes in hidden_layers:\n",
+    "            for alpha in alphas:\n",
+    "                avg_test_score = 0\n",
+    "                avg_worst_score = 0\n",
+    "                for index in range(3):\n",
+    "                    train_score, test_score = run_model(X_train=X_train,\n",
+    "                                                        y_train=y_train,\n",
+    "                                                        X_test=X_test,\n",
+    "                                                        y_test=y_test,\n",
+    "                                                        solver=solver,\n",
+    "                                                        random_state=random_states[index],\n",
+    "                                                        max_iter=10000,\n",
+    "                                                        alpha=alpha,\n",
+    "                                                        hidden_layer_sizes=hidden_layer_sizes)\n",
+    "                    avg_test_score = avg_test_score + test_score\n",
+    "                    avg_worst_score = avg_worst_score + test_score\n",
+    "                \n",
+    "                avg_test_score = avg_test_score / 3.0;\n",
+    "                avg_worst_score = avg_worst_score / 3.0;\n",
+    "                if (avg_test_score > best_test_score):\n",
+    "                    best_test_score = avg_test_score\n",
+    "                    best_solver = solver\n",
+    "                    best_hidden_layers = hidden_layer_sizes\n",
+    "                    best_alpha=alpha\n",
+    "                if (avg_worst_score < worst_test_score):\n",
+    "                    worst_test_score = avg_worst_score\n",
+    "        \n",
+    "        \n",
+    "    print(\"Best average score: {:.8f} over a worst of {:.8f}\".format(best_test_score, worst_test_score))\n",
+    "    print(\"Best solver:\", best_solver)\n",
+    "    print(\"Best hidden layers:\", best_hidden_layers)\n",
+    "    print(\"Best alpha:\", best_alpha)\n",
+    "    if (best_solver == 'lbfgs'):\n",
+    "        print(\"  * lbfgs is an optimizer in the family of quasi-Newton methods\")\n",
+    "    elif (best_solver == 'sgd'):\n",
+    "        print('  * sgd is stochastic gradient descent')\n",
+    "    elif (best_solver == 'adam'):      \n",
+    "        print('  * adam is stochastic gradient-based optimizer proposed by Kingma, Diederik, and Jimmy Ba')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best average score: 0.99300699 over a worst of 0.96270396\n",
+      "Best solver: lbfgs\n",
+      "Best hidden layers: [50, 30, 10]\n",
+      "Best alpha: 1\n",
+      "  * lbfgs is an optimizer in the family of quasi-Newton methods\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_model_tests(cancer.data,cancer.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best average score: 0.96000000 over a worst of 0.88000000\n",
+      "Best solver: lbfgs\n",
+      "Best hidden layers: [100]\n",
+      "Best alpha: 0.1\n",
+      "  * lbfgs is an optimizer in the family of quasi-Newton methods\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_model_tests(X,y)"
+   ]
   }
  ],
  "metadata": {
