--- a/neural-networks.ipynb
+++ b/neural-networks.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is an introductory notebook created to explore O'Reilly Introduction to ML w/Python in the area of k-means clustering https://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPClassifier.html"
+    "This notebook is an introductory notebook created to explore O'Reilly Introduction to ML w/Python in the area of neural networks https://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPClassifier.html"
    ]
   },
   {
