--- a/review-sentiment-analysis-tools.ipynb
+++ b/review-sentiment-analysis-tools.ipynb
@@ -747,11 +747,411 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Much of what is shown in this section is from the docs or this blog post: https://www.analyticsvidhya.com/blog/2018/02/natural-language-processing-for-beginners-using-textblob/#:~:text=The%20sentiment%20function%20of%20textblob,1%20means%20a%20negative%20statement.&text=Subjectivity%20is%20also%20a%20float,the%20sentiment%20of%20our%20blob."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from textblob import TextBlob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/bbenedict/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/bbenedict/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n",
+      "[nltk_data] Downloading package brown to /Users/bbenedict/nltk_data...\n",
+      "[nltk_data]   Package brown is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     /Users/bbenedict/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "nltk.download('brown')\n",
+    "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Python', 'NNP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('a', 'DT'),\n",
+       " ('high-level', 'JJ'),\n",
+       " ('general-purpose', 'JJ'),\n",
+       " ('programming', 'NN'),\n",
+       " ('language', 'NN')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wiki = TextBlob(\"Python is a high-level, general-purpose programming language.\")\n",
+    "wiki.tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WordList(['python'])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wiki.noun_phrases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the blog post: Sentiment analysis is basically the process of determining the attitude or the emotion of the writer, i.e., whether it is positive or negative or neutral.  The sentiment function of textblob returns two properties, polarity, and subjectivity. Polarity is float which lies in the range of [-1,1] where 1 means positive statement and -1 means a negative statement. Subjective sentences generally refer to personal opinion, emotion or judgment whereas objective refers to factual information. Subjectivity is also a float which lies in the range of [0,1]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sentiment(polarity=0.3, subjectivity=0.2)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testimonial = TextBlob(\"Roller coasters are so much fun\")\n",
+    "testimonial.sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sentiment(polarity=-0.375, subjectivity=0.65)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testimonial = TextBlob(\"I am afraid of the dark\")\n",
+    "testimonial.sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Sentence(\"Analytics Vidhya is a great platform to learn data science.\"), Sentence(\"It helps community through blogs, hackathons, discussions,etc.\")]\n"
+     ]
+    }
+   ],
+   "source": [
+    "blob = TextBlob(\"Analytics Vidhya is a great platform to learn data science. \\n It helps community through blogs, hackathons, discussions,etc.\")\n",
+    "print (blob.sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Analytics', 'Vidhya', 'is', 'a', 'great', 'platform', 'to', 'learn', 'data', 'science']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (blob.sentences[0].words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "help\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (blob.sentences[1].words[1].singularize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Analytics', 'NNS'), ('Vidhya', 'NNP'), ('is', 'VBZ'), ('a', 'DT'), ('great', 'JJ'), ('platform', 'NN'), ('to', 'TO'), ('learn', 'VB'), ('data', 'NNS'), ('science', 'NN')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (blob.sentences[0].tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lemmatized word for 'jumped' -> 'jump'\n",
+      "Lemmatized word for 'ran' -> 'run'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from textblob import Word\n",
+    "blob_with_verbs = TextBlob(\"The quick brown fox jumped over the lazy dog and ran into the house.\")\n",
+    "for tagged_word in blob_with_verbs.sentences[0].tags:\n",
+    "    if tagged_word[1][0:2] == 'VB':\n",
+    "        print(\"Lemmatized word for '{}' -> '{}'\".format(tagged_word[0],Word(tagged_word[0]).lemmatize(\"v\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Analytics', 'Vidhya', 'is']\n",
+      "['Vidhya', 'is', 'a']\n",
+      "['is', 'a', 'great']\n",
+      "['a', 'great', 'platform']\n",
+      "['great', 'platform', 'to']\n",
+      "['platform', 'to', 'learn']\n",
+      "['to', 'learn', 'data']\n",
+      "['learn', 'data', 'science']\n",
+      "['data', 'science', 'It']\n",
+      "['science', 'It', 'helps']\n",
+      "['It', 'helps', 'community']\n",
+      "['helps', 'community', 'through']\n",
+      "['community', 'through', 'blogs']\n",
+      "['through', 'blogs', 'hackathons']\n",
+      "['blogs', 'hackathons', 'discussions']\n",
+      "['hackathons', 'discussions', 'etc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ngram in blob.ngrams(3):  # Not sure the value of this\n",
+    "    print (ngram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TextBlob(\"I walked the dog this morning\")"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this is more along the lines of other things you can do with text blob\n",
+    "TextBlob('I walkd the dog thise mornin').correct()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an example of building a classification model from the above mentioned blog post.  This example uses a Naive Bayes classifier.  Textblob also offers Decision tree. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from textblob import classifiers\n",
+    "training = [\n",
+    "('Tom Holland is a terrible spiderman.','pos'),\n",
+    "('a terrible Javert (Russell Crowe) ruined Les Miserables for me...','pos'),\n",
+    "('The Dark Knight Rises is the greatest superhero movie ever!','neg'),\n",
+    "('Fantastic Four should have never been made.','pos'),\n",
+    "('Wes Anderson is my favorite director!','neg'),\n",
+    "('Captain America 2 is pretty awesome.','neg'),\n",
+    "('Let\\s pretend \"Batman and Robin\" never happened..','pos'),\n",
+    "]\n",
+    "testing = [\n",
+    "('Superman was never an interesting character.','pos'),\n",
+    "('Fantastic Mr Fox is an awesome film!','neg'),\n",
+    "('Dragonball Evolution is simply terrible!!','pos')\n",
+    "]\n",
+    "classifier = classifiers.NaiveBayesClassifier(training)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (classifier.accuracy(testing))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most Informative Features\n",
+      "            contains(is) = True              neg : pos    =      2.9 : 1.0\n",
+      "             contains(a) = False             neg : pos    =      1.8 : 1.0\n",
+      "         contains(never) = False             neg : pos    =      1.8 : 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifier.show_informative_features(3)  # Bad training data if the words is, a and never determine sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt_classifier = classifiers.DecisionTreeClassifier(training)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (dt_classifier.accuracy(testing))  # Much worse than Naive Bayes "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A helpful analysis presented at the end of the blogpost:\n",
+    "\n",
+    "Pros:\n",
+    "\n",
+    "Since, it is built on the shoulders of NLTK and Pattern, therefore making it simple for beginners by providing an intuitive interface to NLTK.  Also, it provides language translation and detection which is powered by Google Translate ( not provided with Spacy).\n",
+    "\n",
+    "Cons:\n",
+    "\n",
+    "It is little slower in the comparison to spacy but faster than NLTK. (Spacy > TextBlob > NLTK).  It also does not provide features like dependency parsing, word vectors etc. which is provided by spacy."
+   ]
   }
  ],
  "metadata": {
